--- a/Exercise 4/style.css
+++ b/Exercise 4/style.css
@@ -7,16 +7,188 @@
 }
 
 :root {
-    --bg-body: #fff;
+    --white: #fff;
+
 }
 
 body {
-    background-color: var(--bg-body);
+    background-color: var(--white);
     height: 100vh;
+    width: 100vw ;
     font-family: 'Roboto', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+
+main {
+    width: 1000px;
+}
+
+button {
+    color: black;
+}
+
+h2 {
+    font-weight: 500;
+    font-size: 15px;
+}
+
+p {
+    font-size: 10px;
+}
+.img-album {
+    height: 100px;
+    height: 100px;
 }
 
 header {
-    border: 1px solid red;
+    height: 150px;
     display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 10px;
+    color: rgb(136, 136, 136);
+    position: relative;
+}
+
+
+#app {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 100px;
+    position: relative;
+}
+
+.container-left {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}  
+
+.button-play-playlist {
+    width: fit-content;
+    background-color: rgb(34, 33, 33);
+    border-radius: 9px;
+    color: var(--white);
+    padding: 8px 30px;
+}
+
+.container-itens-info {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.container-music {
+    display: flex;
+    gap: 10px;
+}
+
+.container-buttons {
+    display: flex;
+    gap: 20px;
+    margin-left: 10px;
+}
+
+.box-button {
+    height: 30px;
+    width: 90px;
+    background-color: --white(112, 80, 108);
+    border-radius: 7px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    padding-left: 3px ;
+}
+
+.button-info {
+    background-color: blue;
+    width: 60px;
+    border-radius: 7px;
+    border: 2px solid black;
+    color: #fff;
+}
+
+.only-one-button {
+    margin-left: 10px;
+}
+
+.container-right {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 45px;
+} 
+
+footer {
+    height: 110px;
+    width: 100vw;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0 100px;
+    margin-top: 50px;
+    position: absolute;
+    bottom: 0;
+    left: -100px;
+    background-color: lightgrey;
+}
+
+.container-footer-itens-left {
+    display: flex;
+    gap: 10px;
+}
+
+.img-music-current {
+    height: 80px;
+    margin-top:15px ;
+}
+
+.information-of-music-current {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.last-items-footer-left {
+    display: flex;
+    align-items: center;
+    gap: 10px; 
+}
+
+.wrapper-sound {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+
+.items-footer-right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.items-footer-right-top {
+    display: flex;
+    gap: 50px;
+    align-items: center;
+    margin-top: 20px;
+}
+
+progress {
+    display:block;
+    -webkit-appearance: none;
+}
+
+progress::-webkit-progress-value {
+    background-color: black;
+    border-radius: 10px;
+}
+
+progress[value]::-webkit-progress-bar {
+    background: #eeeeee;
+    border-radius: 10px;
+    height: 10px;
 }
